--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -7,6 +7,18 @@
 </head>
 <body>
 <script>
+  const keySequence = [];
+  const code = "ivodee"
+  window.addEventListener('keyup', (e) => {
+    console.log(e.key);
+    keySequence.push(e.key);
+    keySequence.splice(-code.length - 1, keySequence.length - code.length);
+    if(keySequence.join('').includes(code)){
+      console.log("YOU FOUND THE CODE!");
+      cornify_add();
+    }
+    console.log(keySequence);
+  });
 </script>
 </body>
 </html>
